@@ -121,8 +121,8 @@ BEGIN_RCPP
 END_RCPP
 }
 // spectralIndicesCpp
-NumericMatrix spectralIndicesCpp(NumericMatrix x, CharacterVector indices, const int redBand, const int blueBand, const int greenBand, const int nirBand, const int swir2Band, const int swir1Band, double L, double s, double G, double C1, double C2, double Levi);
-RcppExport SEXP RStoolbox_spectralIndicesCpp(SEXP xSEXP, SEXP indicesSEXP, SEXP redBandSEXP, SEXP blueBandSEXP, SEXP greenBandSEXP, SEXP nirBandSEXP, SEXP swir2BandSEXP, SEXP swir1BandSEXP, SEXP LSEXP, SEXP sSEXP, SEXP GSEXP, SEXP C1SEXP, SEXP C2SEXP, SEXP LeviSEXP) {
+NumericMatrix spectralIndicesCpp(NumericMatrix x, CharacterVector indices, const int redBand, const int blueBand, const int greenBand, const int nirBand, const int swir2Band, const int swir1Band, double L, double s, double G, double C1, double C2, double Levi, double swir2ccc, double swir2cdiff);
+RcppExport SEXP RStoolbox_spectralIndicesCpp(SEXP xSEXP, SEXP indicesSEXP, SEXP redBandSEXP, SEXP blueBandSEXP, SEXP greenBandSEXP, SEXP nirBandSEXP, SEXP swir2BandSEXP, SEXP swir1BandSEXP, SEXP LSEXP, SEXP sSEXP, SEXP GSEXP, SEXP C1SEXP, SEXP C2SEXP, SEXP LeviSEXP, SEXP swir2cccSEXP, SEXP swir2cdiffSEXP) {
 BEGIN_RCPP
     Rcpp::RObject __result;
     Rcpp::RNGScope __rngScope;
@@ -140,7 +140,9 @@ BEGIN_RCPP
     Rcpp::traits::input_parameter< double >::type C1(C1SEXP);
     Rcpp::traits::input_parameter< double >::type C2(C2SEXP);
     Rcpp::traits::input_parameter< double >::type Levi(LeviSEXP);
-    __result = Rcpp::wrap(spectralIndicesCpp(x, indices, redBand, blueBand, greenBand, nirBand, swir2Band, swir1Band, L, s, G, C1, C2, Levi));
+    Rcpp::traits::input_parameter< double >::type swir2ccc(swir2cccSEXP);
+    Rcpp::traits::input_parameter< double >::type swir2cdiff(swir2cdiffSEXP);
+    __result = Rcpp::wrap(spectralIndicesCpp(x, indices, redBand, blueBand, greenBand, nirBand, swir2Band, swir1Band, L, s, G, C1, C2, Levi, swir2ccc, swir2cdiff));
     return __result;
 END_RCPP
 }
